# ml-navigator

./: README.md  app.py  datasession.pickle  pyproject.toml
ml_navigator/front/: callbacks.py  gateway.py  settings.py
ml_navigator/front/assets/: script.js  style.css
ml_navigator/front/assets/data/: stars.csv
ml_navigator/front/layout/: dataviz.py  inputs.py  layouts.py  utils.py
ml_navigator/ml/: model.py  params.py  predictor.py  utils.py
ml_navigator/ml/jupyter/: prepare_data.ipynb  test_predictor.ipynb
ml_navigator/ml/jupyter/dataset/classification/: dataset inferences.csv  dataset.csv
ml_navigator/ml/jupyter/dataset/forecast/: dataset inferences.csv
ml_navigator/ml/jupyter/dataset/regression/: dataset_01_inferences.csv  dataset_02.csv  dataset_02_inferences.csv
ml_navigator/ml/predict_functions/: forecast_skl.py  forecast_stm.py  predict_skl.py
